--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,35 @@
   </head>
   <body>
     <h1>Template</h1>
+    <main>
+      <form novalidate>
+        <h1>Residency Form</h1>
+        <div>
+          <label for="mail">Email:</label>
+          <input type="email" name="mail" id="mail" />
+        </div>
+        <div>
+          <label for="country">Country:</label>
+          <input type="text" name="country" id="country" />
+        </div>
+        <div>
+          <label for="postal-code">Postal Code:</label>
+          <input type="number" name="postal-code" id="postal-code" />
+        </div>
+        <div>
+          <label for="password">Password:</label>
+          <input type="password" name="password" id="password" />
+        </div>
+        <div>
+          <label for="password-confirmation">Pasword Confirmation:</label>
+          <input
+            type="password"
+            name="password-confirmation"
+            id="password-confirmation"
+          />
+        </div>
+        <button type="submit">Submit</button>
+      </form>
+    </main>
   </body>
 </html>
