--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
             id="password-confirmation"
           />
         </div>
-        <button type="submit">Submit</button>
+        <button id="submit-button" type="submit">Submit</button>
       </form>
     </main>
   </body>
