--- a/src/index.html
+++ b/src/index.html
@@ -12,22 +12,37 @@
         <div>
           <label for="mail">Email:</label>
           <br />
-          <input type="email" name="mail" id="mail" />
+          <input type="email" name="mail" id="mail" class="residency-input" />
         </div>
         <div>
           <label for="country">Country:</label>
           <br />
-          <input type="text" name="country" id="country" />
+          <input
+            type="text"
+            name="country"
+            id="country"
+            class="residency-input"
+          />
         </div>
         <div>
           <label for="postal-code">Postal Code:</label>
           <br />
-          <input type="number" name="postal-code" id="postal-code" />
+          <input
+            type="number"
+            name="postal-code"
+            id="postal-code"
+            class="residency-input"
+          />
         </div>
         <div>
           <label for="password">Password:</label>
           <br />
-          <input type="password" name="password" id="password" />
+          <input
+            type="password"
+            name="password"
+            id="password"
+            class="residency-input"
+          />
         </div>
         <div>
           <label for="password-confirmation">Pasword Confirmation:</label>
@@ -36,6 +51,7 @@
             type="password"
             name="password-confirmation"
             id="password-confirmation"
+            class="residency-input"
           />
         </div>
         <button id="submit-button" type="submit">Submit</button>
