feat: add required keyword for validation

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,13 @@
         <div>
           <label for="mail">Email:</label>
           <br />
-          <input type="email" name="mail" id="mail" class="residency-input" />
+          <input
+            type="email"
+            name="mail"
+            id="mail"
+            class="residency-input"
+            required
+          />
         </div>
         <div>
           <label for="country">Country:</label>
@@ -22,6 +28,7 @@
             name="country"
             id="country"
             class="residency-input"
+            required
           />
         </div>
         <div>
@@ -32,6 +39,7 @@
             name="postal-code"
             id="postal-code"
             class="residency-input"
+            required
           />
         </div>
         <div>
@@ -42,6 +50,7 @@
             name="password"
             id="password"
             class="residency-input"
+            required
           />
         </div>
         <div>
@@ -52,6 +61,7 @@
             name="password-confirmation"
             id="password-confirmation"
             class="residency-input"
+            required
           />
         </div>
         <button id="submit-button" type="submit">Submit</button>
