feat: add minlength for validation

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
           <label for="country">Country:</label>
           <br />
           <input
+            minlength="4"
             type="text"
             name="country"
             id="country"
