feat: add minlength on password for validation

--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,7 @@
             id="password"
             class="residency-input"
             required
+            minlength="8"
           />
         </div>
         <div>
