feat: add id name for submission and validation

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <main>
-      <form novalidate>
+      <form id="residency-form" novalidate>
         <h1>Residency Form</h1>
         <div>
           <label for="mail">Email:</label>
